Replace API with JDK-8 Compatible